--- a/app/index.html
+++ b/app/index.html
@@ -606,8 +606,230 @@
             </div>
         </div>
     </section>
+    <section class="service">
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="all-title">
+                            <h2><span>Оплата и доставка</span></h2>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="img-service">
+                                    <img src="img/del.png" alt="">
+                                </div>
+                                <div class="text-service">
+                                    <h3>Доставка</h3>
+                                    <p>Вы получаете, проверяете, оплачиваете свой заказ или в ближайшем отделении почты</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="img-service">
+                                    <img src="img/pay.png" alt="">
+                                </div>
+                                <div class="text-service">
+                                    <h3>Оплата</h3>
+                                    <p>Вы получаете, проверяете, оплачиваете свой заказ или в ближайшем отделении почты</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="discount">
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="all-title">
+                            <h2>Закажите брендовые ремни <span>со скидкой!</span></h2>
+                        </div>
+                        <div class="forma-for-dicsount clearfix">
+                            <div class="forma">
+                                <div class="stock">
+                                    <h3>Акция продлится</h3>
+                                    <p>до <span>30 апреля</span></p>
+                                </div>
+                                <form>
+                                    <input type="text" placeholder="Как Вас зовут?" required>
+                                    <input type="text" placeholder="Ваш E-mail" required>
+                                    <input type="text" placeholder="Ваш телефон" required>
+                                    <button type="submit" name="send">Оставить заявку</button>
+                                </form>
+                            </div>
+                            <div class="img-discount ">
+                                <img src="img/man1.jpg" alt="">
+                            </div>
+                            <div class="red-line-k">
+                                <ul>
+                                    <li>
+                                        <div class="img-red-line">
+                                            <img src="img/medal.png" alt="">
+                                        </div>
+                                        <p>Гарантированное<br> качество</p>
+                                    </li>
+                                    <li>
+                                        <div class="img-red-line">
+                                            <img src="img/cart.png" alt="">
+                                        </div>
+                                        <p>Никакой предоплаты!<br> Оплата при получении</p>
+                                    </li>
+                                    <li>
+                                        <div class="img-red-line">
+                                            <img src="img/calendar.png" alt="">
+                                        </div>
+                                        <p>Возможен возврат в<br> течении 14 дней</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="garant">
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="all-title">
+                            <h2>Работаем <b>честно. Гарантии</b></h2>
+                        </div>
+                        <div class="g-item">
+                            <ul>
+                                <li>
+                                    <div class="img-garant">
+                                        <img src="img/garant.png" alt="">
+                                    </div>
+                                    <h2>Качественный товар</h2>
+                                    <p>Перед отправкой товар тщательно<br> проверяется вручную. Мы работаем<br> только с официальными<br> поставщиками и всегда в первую<br> очередь думаем о своих клиентах</p>
+                                </li>
+                                <li>
+                                    <div class="img-garant">
+                                        <img src="img/garant2.png" alt="">
+                                    </div>
+                                    <h2>Качественный товар</h2>
+                                    <p>Перед отправкой товар тщательно<br> проверяется вручную. Мы работаем<br> только с официальными<br> поставщиками и всегда в первую<br> очередь думаем о своих клиентах</p>
+                                </li>
+                                <li>
+                                    <div class="img-garant">
+                                        <img src="img/garant3.png" alt="">
+                                    </div>
+                                    <h2>Качественный товар</h2>
+                                    <p>Перед отправкой товар тщательно<br> проверяется вручную. Мы работаем<br> только с официальными<br> поставщиками и всегда в первую<br> очередь думаем о своих клиентах</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="reviews">
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="all-title">
+                            <h2><b>Отзывы</b> клиентов</h2>
+                        </div>
+                        <div class="slider-reviews">
+                            <ul>
+                                <li>
+                                    <div class="all-reviews">
+                                        <ul>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="forma-x">
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Для оформления заказа заполните форму и получите подарок!</h2>
+                        <form>
+                            <input type="text" placeholder="Ваше  имя" required>
+                            <input type="text" placeholder="Ваш телефон" required>
+                            <button type="submit" name="send">Отправить</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="map">
+        <img src="img/map.jpg" alt="">
+    </section>
+    <footer>
+        <div class="inner">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="lic">
+                            <p>Название магазина © 2017.</p>
+                            <a href="#">Политика конфиденциальности</a>
+                        </div>
 
-	<div class="hidden">
+                        <div class="call-back">
+                            <p>+ (495) <span>123 45 67</span></p>
+                            <a href="#">Обратный звонок</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div class="hidden">
 		<div id="modal_callback_ok">
 			<h3>Спасибо!</h3>
 			<h3>Ваше сообщение успешно отправлено.</h3>
