--- a/app/index.html
+++ b/app/index.html
@@ -59,12 +59,12 @@
 		<div class="inner">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-2">
+					<div class="col-xs-12 col-md-2">
 						<div class="logo">
 							<a href="#">Лого</a>
 						</div>
 					</div>
-					<div class="col-md-8">
+					<div class="col-xs-12 col-md-8">
 						<div class="head-menu">
 							<ul>
 								<li><a href="#">Акции</a></li>
@@ -76,8 +76,25 @@
 								</a></li>
 							</ul>
 						</div>
+                        <button class="toggle_mnu hidden">
+                            <span class="sandwich">
+                                <span class="sw-topper"></span>
+                                <span class="sw-bottom"></span>
+                                <span class="sw-footer"></span>
+                            </span>
+                        </button>
+                        <nav class="top_mnu">
+                            <ul>
+                                <li><a href="#" >Акции</a></li>
+                                <li><a href="#" >Преимущества</a></li>
+                                <li><a href="#" >Каталог</a></li>
+                                <li><a href="#" >как мы работаем</a></li>
+                                <li><a href="#" >Доставка и оплатааявку</a></li>
+                                <li><a href="#" >...</a></li>
+                            </ul>
+                        </nav>
 					</div>
-					<div class="col-md-2">
+					<div class="col-xs-12 col-md-2">
 						<div class="call-back">
 							<p>+ (495) <span>123 45 67</span></p>
 							<a href="#">Обратный звонок</a>
@@ -104,7 +121,7 @@
 		<div class="inner">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-xs-6 col-md-6">
 						<div class="banner">
 							<h1>Качественные</h1>
 							<h2>брендовые ремни</h2>
@@ -144,7 +161,7 @@
 							<a href="#">посмотреть еще бренды ...</a>
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-xs-6 col-md-6">
 						<div class="right-top-forma">
 							<div class="forma">
 								<form>
@@ -175,7 +192,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2><b>Почему</b> мужчины выбирают <b>эти ремни?</b></h2>
                         </div>
@@ -224,7 +241,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2><b>Каталог</b> брендовых ремней</h2>
                         </div>
@@ -1178,7 +1195,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                             <h2>Как мы работаем</h2>
                     </div>
                 </div>
@@ -1189,7 +1206,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <ul>
                             <li>
                                 <div class="img-w">
@@ -1225,7 +1242,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2><span>Оплата и доставка</span></h2>
                         </div>
@@ -1258,7 +1275,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2>Закажите брендовые ремни <span>со скидкой!</span></h2>
                         </div>
@@ -1313,7 +1330,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2>Работаем <b>честно. Гарантии</b></h2>
                         </div>
@@ -1351,12 +1368,12 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="all-title">
                             <h2><b>Отзывы</b> клиентов</h2>
                         </div>
                         <div class="slider-reviews">
-                            <ul id="reviews clearfix">
+                            <ul id="reviews" class="clearfix">
                                 <li>
                                     <div class="all-reviews">
                                         <ul>
@@ -1405,17 +1422,105 @@
                                     </div>
                                 </li>
                                 <li>
-
+                                    <div class="all-reviews">
+                                        <ul>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                                 <li>
-
+                                    <div class="all-reviews">
+                                        <ul>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="foto-client">
+                                                    <img src="img/foto.jpg" alt="">
+                                                </div>
+                                                <div class="otz-text mCustomScrollbar" data-mcs-theme="dark">
+                                                    <h3>Настоящему мужчине</h3>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                    <p>Заказывала ремень Armani, качество отличное! Кожа имеет хорошо выделанный рисунок, приятный цвет и презентабельная упаковка. Все было доставлено в срок и никаких проблем при получении не возникло.</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </li>
                             </ul>
                             <div class="arrows-slider">
-                                <div class="left-arrow">
+                                <div class="left-arrow1">
                                     <a href="#"></a>
                                 </div>
-                                <div class="right-arrow">
+                                <div class="right-arrow1">
                                     <a href="#"></a>
                                 </div>
                             </div>
@@ -1429,7 +1534,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <h2>Для оформления заказа заполните форму и получите подарок!</h2>
                         <form>
                             <input type="hidden" name="project_name" value="Ремни">
@@ -1451,7 +1556,7 @@
         <div class="inner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="lic">
                             <p>Название магазина © 2017.</p>
                             <a href="#">Политика конфиденциальности</a>
