--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
 		<div class="inner">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-xs-6 col-md-6">
+					<div class="col-xs-12 col-sm-6 col-md-6">
 						<div class="banner">
 							<h1>Качественные</h1>
 							<h2>брендовые ремни</h2>
@@ -161,7 +161,7 @@
 							<a href="#">посмотреть еще бренды ...</a>
 						</div>
 					</div>
-					<div class="col-xs-6 col-md-6">
+					<div class="col-xs-12 col-sm-6">
 						<div class="right-top-forma">
 							<div class="forma">
 								<form>
@@ -187,6 +187,69 @@
 				</div>
 			</div>
 		</div>
+        <div class="mobile-ver-sl">
+            <div class="top-sl-mobile">
+                <div class="banner">
+                    <h1>Качественные</h1>
+                    <h2>брендовые ремни</h2>
+                    <ul>
+                        <li>
+                            <p>Широкий выбор брендовых ремней</p>
+                        </li>
+                        <li>
+                            <p>Скидка 30% на все ремни</p>
+                        </li>
+                        <li>
+                            <p>Оригинальная упаковка в подарок</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="brends">
+                    <ul class="clearfix">
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                        <li>
+                            <img src="img/armany.png" alt="">
+                        </li>
+                    </ul>
+                    <a href="#">посмотреть еще бренды ...</a>
+                </div>
+            </div>
+            <div class="right-top-forma">
+                <div class="forma">
+                    <form>
+                        <h2>Закажите</h2>
+                        <p>брендовые ремни</p>
+                        <h3>со скидкой</h3>
+                        <input type="hidden" name="project_name" value="Ремни">
+                        <input type="hidden" name="admin_email" value="ElectroDeggi33759@yandex.ru">
+                        <input type="hidden" name="form_subject" value="Регистрация">
+                        <input type="text" placeholder="Как Вас зовут?" required>
+                        <input type="text" placeholder="Ваш E-mail" required>
+                        <input type="text" placeholder="Ваш телефон" required>
+                        <button type="submit" name="send">Оставить заявку</button>
+                    </form>
+                    <i>------------------------------------------------</i>
+                    <div class="stock">
+                        <h3>Акция продлится</h3>
+                        <p>до <span>30 апреля</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</section>
     <section class="why">
         <div class="inner">
@@ -1565,6 +1628,9 @@
                         <div class="call-back">
                             <p>+ (495) <span>123 45 67</span></p>
                             <a href="#">Обратный звонок</a>
+                        </div>
+                        <div class="belt">
+                            <img src="img/remen.jpg" alt="">
                         </div>
                     </div>
                 </div>
